<resources>
    <string name="app_name">PlayMent</string>
    <string name="label_login">Login</string>
    <string name="label_login_button">Access</string>
    <string name="label_register">Register</string>
    <string name="label_register_button">Register</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_country">Country</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="text_terms">I accept all Terms and Conditions</string>
    <string name="text_no_account">Don\'t have an account?</string>
    <string name="label_register_link">Register now</string>
    <string name="label_user">User</string>
    <string name="validation_no_first_name">First name required.</string>
    <string name="validation_no_last_name">Last name required.</string>
    <string name="validation_no_country">Country required.</string>
    <string name="validation_no_email">Email required.</string>
    <string name="validation_wrong_email_format">Wrong email format.</string>
    <string name="validation_no_password">Password required.</string>
    <string name="validation_no_password2">Password confirmation required.</string>
    <string name="validation_no_password_match">Passwords don\'t match.</string>
    <string name="validation_no_terms">Terms and conditions acceptance required.</string>
    <string-array name="countries">
        <item>Country</item>
        <item>Canada</item>
        <item>United States</item>
        <item>Mexico</item>
    </string-array>
</resources>