<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PlayMent_Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/BottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:text="@string/label_login"
        style="@style/PlayMent_TextView"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/TopGuideline"
        app:layout_constraintStart_toStartOf="@id/LeftGuideline"
        app:layout_constraintEnd_toEndOf="@id/RightGuideline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/TopGuideline"
        app:layout_constraintBottom_toBottomOf="@id/BottomGuideline"
        app:layout_constraintStart_toStartOf="@id/LeftGuideline"
        app:layout_constraintEnd_toEndOf="@id/RightGuideline" >

        <ImageView
            android:id="@+id/imgEmail"
            android:src="@drawable/ic_email"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtLoginEmail"
            android:hint="@string/label_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            style="@style/PlayMent_EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgEmail"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgPassword"
            android:src="@drawable/ic_password"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/imgEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            style="@style/PlayMent_EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/imgEmail"
            app:layout_constraintStart_toEndOf="@id/imgPassword"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/lblRegister"
            android:text="@string/text_no_account"
            style="@style/PlayMent_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/imgPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLoginSubmit"
        android:text="@string/label_login_button"
        style="@style/PlayMent_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/BottomGuideline"
        app:layout_constraintStart_toStartOf="@id/LeftGuideline"
        app:layout_constraintEnd_toEndOf="@id/RightGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>